# Action-RPG-Demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  main.cpp
Assets/animations/Skeleton/: attack.gltf  damage.gltf  death.gltf  idle.gltf  knockback.gltf  run.gltf  skill.gltf  stand.gltf  walk.gltf
Assets/animations/hero/: active.gltf  attack.gltf  dead.gltf  idle.gltf  passive.gltf  walk.gltf
Assets/models/: DG_GroundTile_A.fbx  DG_GroundTile_A.gltf  cube.gltf  hero.gltf  skeleton.gltf
Assets/shaders/: grid.vert  model.frag
assets/models/: cube.gltf  hero.gltf  viking-room.gltf
assets/shaders/: grid.frag  grid.vert  shader.vert
bindings/: CustomImGuiFileDialogConfig.h  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuizmo.h  ImSequencer.cpp  imgui_impl_vulkan.cpp
bindings/ImGuiFileDialog/: CustomImGuiFileDialogConfig.h
bindings/ImGuiFileDialog/dirent/: README.md
bindings/ImGuizmos/: ImCurveEdit.h  ImGuizmo.cpp  ImGuizmo.h
data/: animation.json  basicScene.json  combat.json  scene.json  tempScene.json
data/models/: cube.json  hero.json  skeletonArcher.json  skeletonAxeShield.json  skeletonsLongsword.json
data/shaders/: animation.frag  animation.vert  editor.vert  model.vert
scripts/: shadersCompile.py
scripts/editor/: drawData.lua  main.lua  utilities.lua
scripts/game/: drawData.lua  main.lua
source/: main.cpp
source/core/: Application.cpp  Application.hpp  CMakeLists.txt  Constants.hpp  Utilities.cpp  Utilities.hpp
source/core/camera/: Camera.cpp  Camera.hpp
source/core/components/: MeshModel.cpp  MeshModel.hpp  Model.cpp  Model.hpp  Render.cpp  Render.hpp  Transform.cpp  Transform.hpp
source/core/logger/: Logger.cpp  Logger.hpp
source/core/mesh/: Mesh.cpp  Mesh.hpp  Vertex.cpp  Vertex.hpp
source/core/model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Vertex.cpp  Vertex.hpp
source/core/renderer/: Buffer.cpp  Buffer.hpp  CommandList.cpp  CommandList.hpp  Debug.cpp  Debug.hpp  Device.cpp  Device.hpp  Device.inl  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Initializers.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  RenderDevice.cpp  RenderDevice.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Tools.cpp  Tools.hpp  UIImGui.cpp  UIImGui.hpp  Utils.hpp
source/core/resources/: Model.cpp  Model.hpp  ModelInterface.cpp  ModelInterface.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
source/core/scene/: Scene.cpp  Scene.hpp
source/core/texture/: ResourceManager.cpp  ResourceManager.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
source/core/window/: Window.cpp  Window.hpp
source/editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  Gizmos.cpp  Gizmos.hpp  main.cpp
source/engine/: Application.cpp  Application.hpp  CMakeLists.txt  Constants.hpp  Utilities.cpp  Utilities.hpp
source/engine/MousePicking/: MousePicking.cpp  MousePicking.hpp
source/engine/camera/: Camera.cpp  Camera.hpp
source/engine/components/: AnimationInterface.cpp  AnimationInterface.hpp  Collision.cpp  Collision.hpp  Model.cpp  Model.hpp  ModelInterface.cpp  ModelInterface.hpp  Movement.cpp  Movement.hpp  Status.cpp  Status.hpp  Transform.cpp  Transform.hpp
source/engine/imgui/: UIRender.cpp  UIRender.hpp  Window.cpp  Window.hpp
source/engine/lua/: ImGuiBindings.cpp  ImGuiBindings.hpp  LuaManager.cpp  LuaManager.hpp  MathBindings.cpp  MathBindings.hpp
source/engine/mesh/: Mesh.cpp  Mesh.hpp  Vertex.cpp  Vertex.hpp
source/engine/physcis/: PhysicsEngine.cpp  PhysicsEngine.hpp
source/engine/renderer/: Buffer.cpp  Buffer.hpp  CommandList.cpp  CommandList.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderEngine.cpp  RenderEngine.hpp  SwapChain.cpp  SwapChain.hpp  UIImGui.cpp  UIImGui.hpp
source/engine/resources/: Animation.cpp  Animation.hpp  Model.cpp  Model.hpp  ModelInterface.cpp  ModelInterface.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
source/engine/scene/: Scene.cpp  Scene.hpp
source/engine/threads/: ThreadPool.cpp  ThreadPool.hpp
source/engine/ui/: UIRender.cpp  Window.cpp  Window.hpp
source/engine/window/: Window.cpp  Window.hpp
source/game/: CMakeLists.txt  CombatSystem.cpp  CombatSystem.hpp  Game.cpp  Game.hpp  main.cpp
source/game/components/: Combat.cpp  Combat.hpp
tools/: release.py  shadersCompile.py
