# ImGui
include_directories(../../bindings)

# Source Code
file(GLOB_RECURSE RENDERER_SOURCE_FILES renderer/*.cpp)
file(GLOB_RECURSE WINDOW_SOURCE_FILES window/*.cpp)
file(GLOB_RECURSE MESH_SOURCE_FILES mesh/*.cpp)
file(GLOB_RECURSE UI_SOURCE_FILES ui/*.cpp)
file(GLOB_RECURSE CAMERA_SOURCE_FILES camera/*.cpp)
file(GLOB_RECURSE TEXTURE_SOURCE_FILES resources/*.cpp)
file(GLOB_RECURSE SCENE_SOURCE_FILES scene/*.cpp)
file(GLOB_RECURSE COMPONENTS_SOURCE_FILES components/*.cpp)
file(GLOB_RECURSE LUA_SOURCE_FILES components/*.cpp)
file(GLOB_RECURSE ENGINE_SOURCE_FILES *.cpp)
file(GLOB_RECURSE IMGUI_SOURCE_FILES *.cpp)

add_library(core STATIC
        ${IMGUI_SOURCE_FILES}
        ${LUA_SOURCE_FILES}
        ${COMPONENTS_SOURCE_FILES}
        ${SCENE_SOURCE_FILES}
        ${TEXTURE_SOURCE_FILES}
        ${ENGINE_SOURCE_FILES}
        ${CAMERA_SOURCE_FILES}
        ${UI_SOURCE_FILES}
        ${MESH_SOURCE_FILES}
        ${RENDERER_SOURCE_FILES}
        ${WINDOW_SOURCE_FILES})