# ImGui
include_directories(../../bindings)

# Source Code
file(GLOB_RECURSE RENDERER_HEADER_FILES renderer/*.hpp)
file(GLOB_RECURSE RENDERER_SOURCE_FILES renderer/*.cpp)

file(GLOB_RECURSE WINDOW_HEADER_FILES window/*.hpp)
file(GLOB_RECURSE WINDOW_SOURCE_FILES window/*.cpp)

file(GLOB_RECURSE MESH_HEADER_FILES mesh/*.hpp)
file(GLOB_RECURSE MESH_SOURCE_FILES mesh/*.cpp)

file(GLOB_RECURSE UI_HEADER_FILES ui/*.hpp)
file(GLOB_RECURSE UI_SOURCE_FILES ui/*.cpp)

file(GLOB_RECURSE CAMERA_HEADER_FILES camera/*.hpp)
file(GLOB_RECURSE CAMERA_SOURCE_FILES camera/*.cpp)

file(GLOB_RECURSE TEXTURE_HEADER_FILES resources/*.hpp)
file(GLOB_RECURSE TEXTURE_SOURCE_FILES resources/*.cpp)

file(GLOB_RECURSE SCENE_HEADER_FILES scene/*.hpp)
file(GLOB_RECURSE SCENE_SOURCE_FILES scene/*.cpp)

file(GLOB_RECURSE COMPONENTS_HEADER_FILES components/*.hpp)
file(GLOB_RECURSE COMPONENTS_SOURCE_FILES components/*.cpp)

file(GLOB_RECURSE CORE_HEADER_FILES *.hpp)
file(GLOB_RECURSE CORE_SOURCE_FILES *.cpp)

file(GLOB_RECURSE LUA_HEADER_FILES lua/*.hpp)
file(GLOB_RECURSE LUA_SOURCE_FILES lua/*.cpp)

file(GLOB_RECURSE THREADS_HEADER_FILES threads/*.hpp)
file(GLOB_RECURSE THREADS_SOURCE_FILES threads/*.cpp)

add_library(core STATIC
        ${THREADS_SOURCE_FILES} ${THREADS_HEADER_FILES}
        ${LUA_SOURCE_FILES} ${LUA_HEADER_FILES}
        ${COMPONENTS_SOURCE_FILES} ${COMPONENTS_HEADER_FILES}
        ${SCENE_SOURCE_FILES} ${SCENE_HEADER_FILES}
        ${TEXTURE_SOURCE_FILES} ${TEXTURE_HEADER_FILES}
        ${CORE_SOURCE_FILES} ${CORE_HEADER_FILES}
        ${CAMERA_SOURCE_FILES} ${CAMERA_HEADER_FILES}
        ${UI_SOURCE_FILES} ${UI_HEADER_FILES}
        ${MESH_SOURCE_FILES} ${MESH_HEADER_FILES}
        ${RENDERER_SOURCE_FILES} ${RENDERER_HEADER_FILES}
        ${WINDOW_SOURCE_FILES} ${WINDOW_HEADER_FILES})